@@ -39,6 +39,7 @@ Bugs fixed
 * PR#281, PR#282, #1509: TODO extension not compatible with websupport. Thanks
   to Takeshi Komiya.
 * #1477: gettext does not extract nodes.line in a table or list.
+* #1544: `make text` generate wrong table when it has empty table cells.
 
 Release 1.2.2 (released Mar 2, 2014)
 ====================================
